first working commit

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/mrmakeit/36N-Streamdeck#readme",
   "dependencies": {
-    "elgato-stream-deck": "^2.0.0",
     "obs-websocket-js": "^1.1.0",
-    "winston": "^2.4.0"
+    "sharp": "^0.19.0",
+    "streamdeck": "^1.0.2"
   }
 }
