--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mrmakeit/36N-Streamdeck#readme",
   "dependencies": {
+    "node-env-file": "^0.1.8",
     "obs-websocket-js": "^1.1.0",
     "sharp": "^0.19.0",
     "streamdeck": "^1.0.2"
