update with community key support

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
-OBS_HOST="127.0.0.1"
-OBS_PORT="4444"
-OBS_PASS=""
-OBS_STREAM_SERVER="rtmp://x.rtmp.youtube.com/live2"
-OBS_STREAM_KEY=""
+OBS_HOST="127.0.0.1" #OBS websocket address
+OBS_PORT="4444" #OBS websocket port
+OBS_PASS="" #OBS websocket server password
+#OBS_STREAM_SERVER="" #default stream server
+#OBS_STREAM_KEY="" #default stream key
